Update 대규모 웹 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -257,6 +257,20 @@
 
 가까운 예로 보는 이론/연구의 실전 투입
 
+### 하테나 다이어리의 키워드 링크
+
+- 어휘수가 많아지면서 정규표현 컴파일/ 정규표현 패턴매칭 부하가 무시하지 못할 수준으로 증가함
+- Trie 알고리즘 활용. 탐색 대상 문자열 집합을 트리 구조로 표현합니다.
+- ![](WebMassiveService_Image/2022-06-08-18-43-25.png)
+- 예를 들어 hogefoo 라는 단어를 생각해보자. 이 단어를 입력으로 foo, bar, baz의 Trie 구조를 순회하도록 한다면 h라는 문자열이 포함되어 있지 않으므로 매칭되지 않음을 알 수 있다. 다음으로 oge로 순회할때도 마찬가지, ge도, e도 마찬가지다. 그리고 나서 f부터 Trie를 순회하고 oo로 이어지면서 foo가 매칭됨을 알 수 있다. 결국 hogefoo라는 단어의 길이만큼만 계산하면 끝이다.
+
+**AC법**
+
+- AC(Aho-Corasick)법은 Trie에서의 패턴매칭을 매칭이 진행되다가 도중에 실패했을 경우, 되돌아오는 길의 엣지에 다시 Trie에 추가한 데이터 구조를 사용하는 방법이다.
+- 사전 내에서 패턴매칭을 수행하는 오토마톤을 구축하고 입력 텍스트에 대해 선형 계산시간을 실현한다. 이는 계산량이 사전 크기에 의존하지 않는 빠른 방법이다.
+- ![](WebMassiveService_Image/2022-06-08-18-52-16.png)
+- 예를 들어 Trie에 "babcdes"를 입력한 경우 bab가 발견된 다음은 ab가 발견될 거라는 것은 알고 있다. 그러므로 bab 까지 탐색했다면 다시 선두 노드인 0으로 돌아가는게 아니라 바로 노드 2로 갈 수 있다는 걸 알 수 있다면 ab를 바로 찾을 수 있을 것이다. 여기서 '6 다음은 바로 2' 라고 길을 내는 전처리를 Trie에 대해 수행하는 것이 AC 법의 핵심이다.
+
 ## 8. [과제] 하테나 키워드 링크 구현
 
 응용으로 가는 길 깨닫기
