Update 대규모 웹 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -271,6 +271,11 @@
 - ![](WebMassiveService_Image/2022-06-08-18-52-16.png)
 - 예를 들어 Trie에 "babcdes"를 입력한 경우 bab가 발견된 다음은 ab가 발견될 거라는 것은 알고 있다. 그러므로 bab 까지 탐색했다면 다시 선두 노드인 0으로 돌아가는게 아니라 바로 노드 2로 갈 수 있다는 걸 알 수 있다면 ab를 바로 찾을 수 있을 것이다. 여기서 '6 다음은 바로 2' 라고 길을 내는 전처리를 Trie에 대해 수행하는 것이 AC 법의 핵심이다.
 
+### 하테나 북마크의 기사 분류
+
+- 베이지안 필터 : 텍스트 문서 등을 입력으로 받아들이고 거기에 나이브 베이즈(Naive Bayes)라고 하는 알고리즘을 적용해서 확률적으로 해당 문서가 어느 카테고리에 속하는지를 판정하는 프로그램
+  - 특징적인 것은 미지의 문서의 카테고리 판정을 수행함에 있어서 과거에 분류가 끝난 데이터의 통계정보로부터 판정을 수행한다는 점이다.
+
 ## 8. [과제] 하테나 키워드 링크 구현
 
 응용으로 가는 길 깨닫기
