Update 대규모 웹 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -284,6 +284,28 @@
 
 대규모 데이터 처리의 노하우
 
+### 전문 검색기술의 응용범위
+
+### 검색 시스템의 아키텍처
+
+**검색 시스템이 완성되기까지**
+
+- 검색이 가능하기까지
+  - 크롤링
+  - 저장
+  - 인덱싱
+  - 검색
+  - 스코어링
+  - 결과표시
+
+- 우선 처음에 검색할 문서를 가져와야 한다. (크롤링) 
+- 가져온 문서를 어떻게 저장할 것인가라는 문제가 있다. 예를 들면, 하나의 데이터베이스에 넣는다면 해당 데이터베이스가 깨졌을 때 복원할 수 없으므로 분산 데이터베이스에 저장해야 하는 문제가 있다.
+- 가져온 문서로부터 인덱스를 구축한다. (인덱싱)
+- 검색에서는 검색 쿼리를 포함하는 문서가 검색결과로서 반환되는데, 그 순서가 평범하다면 전혀 기쁘지 않을 것이다. 검색결과를 어떤 순서로 표시해줄 것인가라는 것은 굉장히 중요한 문제다. (스코어링 혹은 랭킹)
+- 스코어링 후에 결과를 표시
+
+### 검색 엔진의 내부구조
+
 ## 10. [과제] 전문 검색엔진 작성
 
 기초, 상세부분 작성, 속도와 정확성 추구
