Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -322,6 +322,26 @@
 
 규모 중대와 시스템 확장
 
+### 계층과 확장성
+
+![](WebMassiveService_Image/2022-06-13-19-22-27.png)
+
+- 성능이 아주 좋은 고성능 장비라도 1대로는 서버 트래픽을 전부 감당하지 못할 수 있다.
+- 차라리 저가형 기기 여러 대를 연결해 확장하는 것이 좋다.
+
+**계층별 확장성**
+
+- AP 서버는 기본적으로 그다지 깊은 부분까지 생각하지 않아도 비교적 간단하게 확장할 수 있다. 그 이유는 AP 서버는 상태를 갖고 있지 않으므로 요청별로 다른 AP 서버로 날려보내도 처리상 문제가 발생하지 않고 로드밸런서에 새로운 서버를 추가해가면 점점 확장되어 간다.
+- 반면에 DB나 파일 서버의 경우에는 분산/ 확장성 확보가 매우 어렵다.
+
+**부하 파악, 튜닝**
+
+- 어떻게 확장해갈 것인지를 검토하기 위해서는 먼저 서버 부하를 파악할 수 있어야 한다.
+
+**부하를 측정하기 위한 항목**
+
+- Load Average : 프로세스가 언제든지 동작할 수 있는 상태이지만, 아직 실제 CPU가 할당되지 않아서 대기상태에 있는 프로세스 수의 평균치다. 예를 들어 5분간 Load Average가 1이라고 하면, 5분 동안에 평균 1개의 프로세스가 대기상태로 되어 있다는 것을 의미한다.
+
 ## 13. 다중성 확보, 시스템 안정화
 
 100%에 근접한 가동률을 실현하는 원리
