Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -346,6 +346,22 @@
 
 100%에 근접한 가동률을 실현하는 원리
 
+### 다중성 확보 - AP 서버
+
+- 다중화에 대한 실제적인 얘기를 하자면 AP 서버에서는 확장성을 생각하는 방식과 마찬가지로 서버 여러 대를 늘어놓는 게 기본이 된다. 서버를 늘어놓을 때 중요한 것은 1대나 2대 정도 정지하더라도 충분히 처리할 수 있도록 처리 능력을 확보해두는 것이다.
+- 이에 대한 대응으로 로드밸런서로 페일오버(failover, 장애 극복), 페일백(failback, 정상복귀)하여 고장 난 서버를 자동적으로 분리하고, 서버가 복구되면 원 상태로 복귀시키는 작업을 수행하고 있다. 페일오버는 자동으로 분리하는 것, 페일백은 정상이 되면 복귀시키는 처리를 말한다. 로드밸런서는 서버에 대해 주기적으로 헬스체크를 하고 있으며, AP 서버나 DB 서버가 살아있는지 여부를 판정하고 있다. 이는 다중화에서 가장 기본적인 부분이다.
+- ![](WebMassiveService_Image/2022-06-13-19-37-08.png)
+
+**다중성 확보 - DB 서버**
+
+- DB 서버도 마찬가지로 서버를 여러 대 나열해서 1, 2대 정지하더라도 충분한 처리능력이 있도록 해두는 것이 중요하다. 또한 마스터의 다중화를 수행하고 있다.
+- 하테나에서는 멀티 마스터라는 방법을 사용하고 있다. 구체적으로 말하면 쌍방향 레플리케이션, 즉 서로가 서로의 슬레이브가 되는 상태로 해두고 한쪽에 쓰기 작업을 하면 다른 한쪽으로 전달하고 반대쪽에 쓰더라도 다른 쪽으로 전달하는, 양방향 레플리케이션 방법이다.
+- ![](WebMassiveService_Image/2022-06-13-19-41-19.png)
+
+**다중성 확보 - 스토리지 서버**
+
+- 하테나에서는 이미지 파일과 같은 미디어 파일을 저장하기 위한 분산 스토리지 서버로 MogileFS를 사용하고 있다. 분산 파일 시스템을 사용함으로써 대량의 파일을 보존할 수 있는 확장성과 일부 서버가 다운 되더라도 전체 장애가 되지 않도록 다중성을 확보할 수 있다.
+
 ## 14. 효율향상전략
 
 하드웨어의 리소스 사용률 높이기
