Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -362,6 +362,16 @@
 
 - 하테나에서는 이미지 파일과 같은 미디어 파일을 저장하기 위한 분산 스토리지 서버로 MogileFS를 사용하고 있다. 분산 파일 시스템을 사용함으로써 대량의 파일을 보존할 수 있는 확장성과 일부 서버가 다운 되더라도 전체 장애가 되지 않도록 다중성을 확보할 수 있다.
 
+### 시스템 안정화
+
+- 빠듯할 정도로 메모리를 튜닝해서 8GB 중에 7.5GB 정도까지 메모리를 사용하도록 설정해두고 있다고 하자. 이 상태로 다른 일이 발생하지 않으면 좋겠지만, 처리해야 할 데이터량이 늘어나거나 애플리케이션에 버그가 있거나 메모리 누수가 발생해서 소비 메모리량이 갑자기 수백 MB 늘어나는 것은 그렇게 드문 일이 아니다. 이처럼 메모리를 빠듯하게 튜닝하게 되면 메모리가 늘어낫을 때 곧바로 스왑을 사용하기 시작해서 성능이 저하되면서 서비스 장애로 이어지게 된다.
+- 또 하나는 CPU를 거의 한계에 다다를 정도로 사용하는 것이다. 이렇게 되면 서버 대수를 줄일 수 있어서 비용면에서는 유리하지만, 한계에 다다른 상태에서 1대에 장대가 발생하면 전체적으로 처리능력이 부족해져서 요청을 다 처리하지 못하고 막혀서 장애가 되는 이런 경우도 종종 발생한다.
+- 이렇게 되지 않기 위해 실제로 취해야 하는 대책으로, 메모리는 7할 정도까지만 사용한다거나 CPU를 7할 정도까지만 사용하는 등 어느 정도 여유를 가질 수 있게 설계하는 것이 중요하다. 앞에서 1, 2대가 다운되더라도 문제가 없도록 한다는 얘기를 했는데, 한계에 다다를 정도로 사용하지 않고 어는 정도 버퍼를 유지하고 버퍼가 부족해지면 새로운 서버를 추가하거나 구성을 약간 변경해서 전체적인 사용량을 줄이는 대책을 계속해감으로써 안정성을 확보할 수 있다.
+
+**시스템의 불안정요인**
+
+![](WebMassiveService_Image/2022-06-13-19-51-07.png)
+
 ## 14. 효율향상전략
 
 하드웨어의 리소스 사용률 높이기
