--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -4,10 +4,7 @@
 
 **하테나 소개**
 
-하테나(hatena)는 '지식 커뮤니티' 인력검색 서비스와 다이어리(블로그) 호스팅 
-서비스, 소셜 북마크 서비스 등을 개발해 운영하고 있는 일본의 인터넷 기업으로, 
-인터넷 서비스의 가장 매력적인 두 가지 요소인 'Fun'과 'Creativity'를 함께 
-추구하는 서비스, 생활 파트너로서 존재하는 서비스를 제공하고 있다.
+하테나(hatena)는 '지식 커뮤니티' 인력검색 서비스와 다이어리(블로그) 호스팅 서비스, 소셜 북마크 서비스 등을 개발해 운영하고 있는 일본의 인터넷 기업으로, 인터넷 서비스의 가장 매력적인 두 가지 요소인 'Fun'과 'Creativity'를 함께 추구하는 서비스, 생활 파트너로서 존재하는 서비스를 제공하고 있다.
 
 ## 1. 대규모 웹 서비스 개발 오리엔테이션
 
@@ -381,6 +378,50 @@
 ## 15. 웹 서비스와 네트워크
 
 서비스의 성장
+
+### 가상화 기술
+
+**가상화 기술의 도입**
+
+먼저 가상화 기술의 목적을 정리해보자면 아래와 같은 점을 들 수 있을 것이다.
+
+- 확장성
+  - 오브헤드의 최소화
+- 비용대비 성능
+  - 리소스 사용률 향상
+  - 운용의 유연함(환경의 단순화)
+- 고가용성
+  - 환경의 격리
+
+**가상화 기술의 효용**
+
+하테나에서는 가상화 기술을 사용함으로써 실제로 다음과 같은 효용을 얻고 있다.
+
+- IPMI(Intelligent Platform Management Interface)를 대체하는 하이퍼바이저
+- 하드웨어 간 차이 흡수(-> 환경 추상화)
+- 준 가상화(ParaVirtualization) 사용
+- 리소스 소비 제어
+  - 과부하 경고
+  - 부하 조정
+
+벤더 서버에는 IPMI라는 리모트 관리 기능이 있는데, 이를 대체해서 하이퍼바이저를 사용할 수 있게 되어 있다. 하이퍼바이저는 이른바 호스트 OS를 말한다. 서버 상에 최초리 기동하는 OS를 '하이퍼바이저' (Xen 용어로는 Dom0), 호스트 OS 상에서 기동하는 OS를 '게스트 OS'(Xen 용어로는 DomU)라고 하는데, 호스트OS를 다른 이름인 '하이퍼바이저'라고 한다. IPMI는 벤더에서 만든 서버 제품으로 구현되어 있는 경우가 많은 리모트 관리환경으로, 예를 들어 전원 On, Off를 원격에서 수행할 수도 있다. 하테나에서는 IPMI의 대체품으로서 하이퍼바이저라는 계층을 하나 늘림으로써 게스트 OS를 리모트에서 제어하고 있다. 이에 따라 IPMI가 탑재되어 있지 않은 저가의 하드웨어를 사용할 수가 있다.
+
+다음으로 하드웨어 차이를 흡수해서 환경을 추상화할 수 있다. 이에 따라 새로운 하드웨어나 오래된 하드웨어로도 차분에 신경 쓰지 말고 사용할 수 있다. Xen에 특화된 얘기지만, 가상화로 인한 오버헤드를 줄이기 위해 하드웨어를 완전히 에뮬레이팅 하지 않은 준 가상화(ParaVirtualization)라는 방식이 있으며, 하테나에서는 이 방식을 사용하고 있다.
+
+리소스 소비를 소프트웨어 레벨에서 강력하게 제어할 수 있게 되어 있다. 리소스 소비를 제어함으로써 '과부하 경고', '부하 조정'을 수행한다. 과부하일 때 프로세스를 재시작하는 것뿐만 아니라 게스트 OS의 자동 재시작도 수행한다. 게스트 OS를 자동적으로 재시작할 때는 리소스 관리용 툴(monit)을 사용해서 Load Average가 얼마인지, 메모리 소비는 어느 정도인지, 네트워크 커넥션을 확립할 수 있을지 등을 감시한다. 감시하고 있는 값이 설정한 임계치를 넘어서면 Apache 재시작이나 게스트 OS 를 재기동하게 되는 것이다.
+
+**가상화 서버 구축정책**
+
+가상화 기술을 도입하는 가장 기본적인 목적은 하드웨어의 이용효율 향상이다. 하드웨어의 이용효율 향상을 위해 남아있는 리소스를 사용하는 게스트 OS를 투입한다. 예를 들어 CPU 리소스가 남아있으면 웹 서버, I/O 리소스가 남아있으면 DB 서버, 메모리 용량이 남아있으면 캐시 서버를 투입한다.
+
+![](WebMassiveService_Image/2022-06-14-19-50-42.png)
+
+**가상화로 얻은 장점 정리**
+
+구체적인 장점으로는
+
+- 물리적인 리소스 제약에서 해방됨으로써 동적으로 변경할 수 있게 되고, 게스트 OS의 마이그레이션이나 복제가 용이해졌다. 이에 따라 서버 증설이 용이해지고 확장성을 확보할 수 있게 되었다.
+- 다음으로 소프트웨어 레벨에서 호스트 리소스를 강력하게 제어할 수 있고, 비정상 동작 시 문제를 국소화시키고 호스트를 쉽게 제어할 수 있게 되었다. 효율이 향상되고 시스템을 전체적으로 안정화할 수 있게 되었다.
 
 ## Appendix A. 현대 웹 서비스 구축에 필요한 실전 기술
 
