Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -423,6 +423,17 @@
 - 물리적인 리소스 제약에서 해방됨으로써 동적으로 변경할 수 있게 되고, 게스트 OS의 마이그레이션이나 복제가 용이해졌다. 이에 따라 서버 증설이 용이해지고 확장성을 확보할 수 있게 되었다.
 - 다음으로 소프트웨어 레벨에서 호스트 리소스를 강력하게 제어할 수 있고, 비정상 동작 시 문제를 국소화시키고 호스트를 쉽게 제어할 수 있게 되었다. 효율이 향상되고 시스템을 전체적으로 안정화할 수 있게 되었다.
 
+**가상화 도입 시 주의할 점**
+
+전형적인 단점으로는 오버헤드가 있다. 하테나에서의 경험치로는 대략 다음과 같은 수치를 오버헤드의 기준으로 삼고 있다. 이 점이 최대 단점이다.
+
+- CPU에서 2~3%
+- 메모리 성능에서 1할 정도
+- 네트워크 성능은 절반 정도
+- I/O 성능이 5% 정도 떨어진다.
+
+다음으로 가상화 기술 구현상 결함으로 인해 갑자기 네트워크가 단절되는 등의 불안정 요인이 약간 늘어나는 경우가 있는데, 이에 비해 장점이 충분히 크므로 가상화 기술을 사용하고 있다. 하지만 네트워크 성능이 반감해버린다는 것은 용도에 따라서는 꽤 심각하다. 뒤에서 설명하겠지만 하테나에서는 네트워크 라우터로 PC 라우터를 사용하고 있으며, PC 라우터에서는 가상화를 사용하기 때문에 성능이 떨어지는 경우가 있었다. 가상화 기술이 병목현상의 원인이었다는 것을 배우는 계기가 되었다. 따라서 현재는 용도에 따라서는 가상화 기술을 도입하지 않고 사용하고 있는 부문도 있다.
+
 ## Appendix A. 현대 웹 서비스 구축에 필요한 실전 기술
 
 대규모 서비스에 대응하기 위해서
