Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -434,6 +434,16 @@
 
 다음으로 가상화 기술 구현상 결함으로 인해 갑자기 네트워크가 단절되는 등의 불안정 요인이 약간 늘어나는 경우가 있는데, 이에 비해 장점이 충분히 크므로 가상화 기술을 사용하고 있다. 하지만 네트워크 성능이 반감해버린다는 것은 용도에 따라서는 꽤 심각하다. 뒤에서 설명하겠지만 하테나에서는 네트워크 라우터로 PC 라우터를 사용하고 있으며, PC 라우터에서는 가상화를 사용하기 때문에 성능이 떨어지는 경우가 있었다. 가상화 기술이 병목현상의 원인이었다는 것을 배우는 계기가 되었다. 따라서 현재는 용도에 따라서는 가상화 기술을 도입하지 않고 사용하고 있는 부문도 있다.
 
+### 하드웨어와 효율 향상
+
+**프로세서의 성능 향상**
+
+- 무어의 법칙(Moore's Law)은 '집적회로 상의 트랜지스터 수는 18개월마다 2배로 증가한다' 라는 법칙이다. 무어의 법칙은 트랜지스터의 집적도에 대한 얘기로 이 분야는 기술적으로는 계속 성장하고 있다. 반면, 개별 코어의 성능은 이미 한계에 다다른 것이라고들 하는데, 코어 수의 경우에는 앞으로 더 늘어나 것이므로 적어도 서버 용도로 사용하고 있는 한 성능은 현재로선 증가해갈 것이라 기대할 수 있다.
+
+**메모리, HDD의 비용저하**
+
+**SSD**
+
 ## Appendix A. 현대 웹 서비스 구축에 필요한 실전 기술
 
 대규모 서비스에 대응하기 위해서
