--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -444,6 +444,22 @@
 
 서비스의 성장
 
+### 네트워크 분기점
+
+**1Gbps의 한계**
+
+1Gbps의 한계는 정확히는 30만pps의 한계다. 하테나에서 사용하고 있는 표준적인 하드웨어에서 최신의 Linux 커널을 사용하면 대략 30만 패킷/초가 한계라는 사실이 실측 결과 판명되었다. 이때의 평균 패킷 길이가 300바이트라면 대략 1Gbps가 된다. Gibabit Ethernet 레벨에서도 1Gbps라는 게 한계이며, 커널의 성능면에서도 30만 패킷/초가 한계라는 것을 알았다.
+
+이에 대한 대책으로는 PC 라우터를 여러 대 병렬화하든가 박스형 라우터, 예를 들면 고가의 Cisco 라우터를 구입하는 방법이 있다. 지금으로서 하테나에서는 저가의 PC 라우터를 병렬화하는 방향으로 노력하고 있는 상태다.
+
+**500호스트의 한계**
+
+500호스트의 한계는 구체적으로는 스위치의 ARP 테이블(Address Resolution Protocol table)과 관련해서 한계가 있을 듯하다. Ethernet 통신이라는 것은 MAC 주소(Media Access Control Address)를 기반으로 하고 있다. ARP 테이블이란 IP 주소와 MAC 주소 간 대응관계표로 스위치는 이 테이블을 갖고 있다. IP 통신을 할 때는 먼저 IP주소로 통신대상을 지정하면 이에 대응하는 MAC 주소를 검색한 후, Ethernet 계층에서 이 MAC 주소를 사용해서 통신하게 된다. 받아들이는 쪽은 그 내용을 IP 계층까지 확인해서 다른 서브넷으로 보낼지 서브넷 내에서 통신을 마칠지 결정해서 통신을 실현하고 있다. 이 IP주소와 MAC 주소 간 관계를 나타내는 ARP 테이블이 있다.
+
+- 하테나에서는 크기 상한선이 900인 ARP테이블을 사용했는데, 테이블의 내용이 800건 이상까지 늘어나자 갑자기 특정 호스트로만 ping이 가지 않는 등 통신을 할 수 없게 되었다. (500호스트가 한계)
+- 또한 호스트를 많이 두면 브로드캐스팅 패킷이 서서히 증가한다. 점차 이 트래픽이 무시할 수 없을 정도가 되어 브로드캐스팅 패킷을 수신하는 것만으로도 CPU를 약간 잡아먹게 된다.
+- 따라서 1 서브넷 내의 서버 대수는 어느 정도로 억제하는 편이 좋다.
+
 ## Appendix A. 현대 웹 서비스 구축에 필요한 실전 기술
 
 대규모 서비스에 대응하기 위해서
