--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -460,6 +460,15 @@
 - 또한 호스트를 많이 두면 브로드캐스팅 패킷이 서서히 증가한다. 점차 이 트래픽이 무시할 수 없을 정도가 되어 브로드캐스팅 패킷을 수신하는 것만으로도 CPU를 약간 잡아먹게 된다.
 - 따라서 1 서브넷 내의 서버 대수는 어느 정도로 억제하는 편이 좋다.
 
+**글로벌화**
+
+- 태평양을 넘는 액세스라는 것은 상당한 오버헤드다. 하테나의 데이터 센터에 우고메모의 FLV 파일(Flasy Video, 최대 5~6MB 정도의 크기)을 세계 각지에서 HTTP로 가져가려고 한다면 대략 20~30초 정도 걸릴 것이다.
+- CDN을 사용하면 상황은 크게 달라진다. CDN을 사용하면 대략 5~6 초 만에 파일을 받을 수 있으며, 타임아웃도 거의 발생하지 않고 양호한 응답시간을 유지할 수 있다.
+
+
+- CDN(Content Delivery Network)는 세계 각지에 서버를 두고 거기에 미디어를 캐싱시켜서 사용자가 가지러 갈 때에는 가장 가까운 서버로 액세스해서 미디어를 다운로드하도록 하는 것이 기본적인 동작원리다.
+- 예를 들어 Amazon Cloudfront는 서버가 지구 상의 각지에 있는데, 그 중에서 미국 사용자는 가장 가까운 미국 서버로 접속하고, 유럽 사용자는 유럽 서버로 접속, 아시아 사용자는 홍콩이나 일본 서버로 접속한다. 이와 같이 가장 가까운 서버로 접속해서 응답시간을 단축시키는 기술이다.
+
 ## Appendix A. 현대 웹 서비스 구축에 필요한 실전 기술
 
 대규모 서비스에 대응하기 위해서
