Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -472,3 +472,11 @@
 ## Appendix A. 현대 웹 서비스 구축에 필요한 실전 기술
 
 대규모 서비스에 대응하기 위해서
+
+### 작업큐(job-Queue) 시스템
+
+웹 애플리케이션의 일부 처리를 가장 간단하게 비동기화하는 방법은 비동기화하고자 하는 처리를 독립된 스크립트로 해서 해당 스크립트를 애플리케이션 내부에서 호출하는 방법이다. 이렇게 함으로써 아주 간단하게 작업처리를 비동기화할 수가 있다. 단, 이 방법에서는 스크립트 시작과 초기화의 오버헤드가 커서 성능이 좋지는 않다. 또한 일시적으로 대량의 비동기 처리를 실행시키려 하면 그 수만큼의 프로세스를 실행시키려고 하기 때문에 이것도 성능상 단점이 된다.
+- 어느 정도 양이 있는 비동기 처리를 안정적으로 수행하려면 작업큐(Job-Queue)와 워커(Worker)를 세트로 한 작업큐 시스템을 사용하는 것이 일반적이다. 작업큐 시스템에서는 작업큐에 실행하고자 하는 처리(작업)를 등록하고, 워커가 큐에서 작업을 추출해서 실제로 처리한다. 작업큐를 통해서 일시적으로 대량의 처리가 등록되었을 때 부하의 변동을 흡수할 수가 있다.
+
+![](WebMassiveService_Image/2022-06-16-19-27-43.png)
+![](WebMassiveService_Image/2022-06-16-19-28-06.png)
