Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -480,3 +480,37 @@
 
 ![](WebMassiveService_Image/2022-06-16-19-27-43.png)
 ![](WebMassiveService_Image/2022-06-16-19-28-06.png)
+
+### 스토리지 선택
+
+**증가하는 데이터를 어떻게 저장할까**
+
+여기서 스토리지란 '애플리케이션 데이터를 영속적으로 혹은 일시적으로 저장하기 위한 기능'이라는 의미로 사용하고 있다. 한마디로 애플리케이션에서 다루는 데이터라고 해도 업로드된 디지털 카메라 사진 데이터나 블로그 본문과 같이 본질적으로 없어질 수 없는 원본 데이터부터, 원본 데이터를 가공함으로써 생성된 액세스 랭킹이나 검색용 인덱스 데이터 등 재생성 가능한 가공 데이터, 캐시와 같이 사라져도 성능상의 문제 이외에는 다른 문제는 없는 데이터까지 다양한 특성이 있다. 특히 원본 데이터는 가장 중요해서 서비스의 근본적인 신뢰성과 관계되어 있으므로 그에 상응하는 비용을 들여서 최상급 신뢰성을 확보해야 한다. 반면, 캐시와 같은 데이터는 신뢰성은 그다지 중요시되지 않고 성능을 높이거나 비용을 줄일 필요가 있다.
+
+**스토리지 선택의 전제가 되는 조건**
+
+스토리지를 선택할 때에는 애플리케이션에서의 액세스 패턴을 이해하는 것이 중요하다. 액세스 패턴으로는 아래 지표를 참고해볼 수 있다.
+
+- 평균크기
+- 최대크기
+- 신규추가빈도
+- 갱신빈도
+- 삭제빈도
+- 참조빈도
+
+또한 크기에 요구되는 신뢰성, 허용할 수 있는 장애 레벨, 사용할 수 있는 하드웨어나 쓸 수 있는 예산과 같은 부분도 중요한 포인트다.
+
+**스토리지의 종류**
+
+- RDBMS : MySQL 등
+- 분산 Key-Value 스토어 : memcached 등
+- 분산 파일시스템 : MogileFS 등
+- 그 외 기타 등등
+
+**RDBMS**
+
+RDBMS(Relational Database Management System)이란 표 형식으로 데이터를 저장하고 대부분은 SQL 언어로 데이터 조작을 수행하는 시스템이다. 다양한 데이터를 저장한다거나 강력한 질의를 할 수 있어서 가장 범용성이 높은 스토리지다.
+
+**분산 Key-Value 스토어**
+
+key-value 스토어는 key와 value 쌍을 저장하기 위한 심플한 스토리지이고, 분산 key-value 스토어는 key-value 스토어에 네트워크를 지원함으로써 다수의 서버로 확장시키는 기능을 지닌 것이다. key-value 스토어는 RDBMS에 비해 기능적으로는 부족하지만 성능이 10~100배 이상이라는 게 특징이다.
