Update 대규모 서비스를 지탱하는 기술

--- a/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
+++ b/Document/ETC/웹 개발자를 위한 대규모 서비스를 지탱하는 기술.md
@@ -514,3 +514,7 @@ RDBMS(Relational Database Management System)이란 표 형식으로 데이터를
 **분산 Key-Value 스토어**
 
 key-value 스토어는 key와 value 쌍을 저장하기 위한 심플한 스토리지이고, 분산 key-value 스토어는 key-value 스토어에 네트워크를 지원함으로써 다수의 서버로 확장시키는 기능을 지닌 것이다. key-value 스토어는 RDBMS에 비해 기능적으로는 부족하지만 성능이 10~100배 이상이라는 게 특징이다.
+
+**분산 파일시스템**
+
+분산 파일시스템은 그 특성상 보통은 어느 정도 이상인 크기의 데이터를 저장하는 데 적합하다. 작은 데이터가 대량으로 존재하는 용도에는 적합하지 않은 경우가 많다.
