--- a/Document/ETC/우테코장애대응.md
+++ b/Document/ETC/우테코장애대응.md
@@ -32,3 +32,15 @@
 ## 장애 공지
 
 ![](BaeminFailOver.png)
+
+## 장애 복구
+
+> 장애 공지 후에 장애 전파와 장애 복구가 동시에 진행됩니다.
+
+장비증설: 트래픽이 과도하게 몰리거나 변경된 코드가 시스템에 부하를 주는 경우 가장 먼저 장비를 증설합니다. 클라우드 환경의 가장 큰 장점이 손쉽고 빠르게 장비 증설이 가능하다는 점이기 때문에 이를 십분 활용하여 장비 증설을 통해 서비스를 안정화합니다.배달의민족 서비스의 경우 피크 시간의 트래픽이 다른 시간과 비교해서 극단적으로 높은 편입니다. 사전에 이를 충분히 고려해서 장비를 운영하고 있지만, 피크 시간에 예상하지 못한 트래픽이 급격하게 증가하게 되면 시스템이 매우 취약해질 수 있습니다. 이때 장비를 증설하면 빠르게 서비스를 안정화할 수 있고, 실제 병목을 일으키는 지점을 찾아서 근본적인 조처를 할 수 있는 시간을 벌 수 있습니다.
+
+그 외 롤백, 핫픽스, 장비교체
+
+## 장애 후속 조치
+
+> 장애 복구가 완료되고, 서비스가 정상화되면 원인 파악과 재발 방지 대책 수립을 위해ㅔ
