노트북 갱신

--- a/Document_2024/Notebooks/dotnetInteractiveNotebooks_ProtocolCoverage.ipynb
+++ b/Document_2024/Notebooks/dotnetInteractiveNotebooks_ProtocolCoverage.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -54,6 +54,8 @@
    "outputs": [],
    "source": [
     "string oldList = $\"\"\"\n",
+    "Notify_CHANNEL_LoadStageCompleted\n",
+    "Notify_CHANNEL_SendSkillInput\n",
     "Notify_CHANNEL_AchievementCategoryRewardRequest\n",
     "Notify_CHANNEL_AchievementRewardRequest\n",
     "Notify_CHANNEL_AutoCombatStateChangedByUser\n",
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -73,7 +75,38 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===========NewValues===========\n",
+      "Notify_CHANNEL_LoadStageCompleted\n",
+      "\tNotify_CHANNEL_SendSkillInput\n",
+      "\tNotify_CHANNEL_StopRestEmotion\n",
+      "\tNotify_CHANNEL_BeginCombat\n",
+      "\tNotify_CHANNEL_BeginInteractionBehavior\n",
+      "===========OldValues===========\n",
+      "Notify_CHANNEL_LoadStageCompleted\n",
+      "\tNotify_CHANNEL_SendSkillInput\n",
+      "\tNotify_CHANNEL_AchievementCategoryRewardRequest\n",
+      "\tNotify_CHANNEL_AchievementRewardRequest\n",
+      "\tNotify_CHANNEL_AutoCombatStateChangedByUser\n",
+      "===========Newly Added===========\n",
+      "Notify_CHANNEL_BeginCombat\n",
+      "Notify_CHANNEL_BeginInteractionBehavior\n",
+      "Notify_CHANNEL_BeginKnockingGatherBehavior\n",
+      "Notify_CHANNEL_StopRestEmotion\n",
+      "===========Removed===========\n",
+      "Notify_CHANNEL_AchievementCategoryRewardRequest\n",
+      "Notify_CHANNEL_AchievementRewardRequest\n",
+      "Notify_CHANNEL_AutoCombatStateChangedByUser\n",
+      "Notify_CHANNEL_BattlefieldEntranceUIClosed\n",
+      "Notify_CHANNEL_BattlefieldEntranceUIOpened\n",
+      "======================\n"
+     ]
+    }
+   ],
    "source": [
     "string Preprocess(string singleLine)\n",
     "{\n",
@@ -103,49 +136,15 @@
     "    .Select(x => Preprocess(x))\n",
     "    .ToArray();\n",
     "var oldCol = ToStrings(oldList);\n",
-    "WriteLine(string.Join(\"\\n\\t\", newCol.Take(5)));\n",
-    "WriteLine(string.Join(\"\\n\\t\", oldCol.Take(5)));\n",
+    "WriteLine(\"===========NewValues===========\");\n",
+    "WriteLine(string.Join(\"\\n\", newCol.Take(5)));\n",
+    "WriteLine(\"===========OldValues===========\");\n",
+    "WriteLine(string.Join(\"\\n\", oldCol.Take(5)));\n",
     "\n",
-    "\n",
-    "var added = new List<string>();\n",
-    "\n",
-    "foreach (var nl in newCol)\n",
-    "{\n",
-    "    var flag =false;\n",
-    "    foreach(var ol in oldCol)\n",
-    "    {\n",
-    "        \n",
-    "        if(nl == ol){\n",
-    "            flag = true;\n",
-    "            break;\n",
-    "        }\n",
-    "    }\n",
-    "    if(!flag){\n",
-    "        added.Add(nl);\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "var removed = new List<string>();\n",
-    "foreach(var ol in oldCol)\n",
-    "{\n",
-    "    var flag =false;\n",
-    "    foreach (var nl in newCol)\n",
-    "    {\n",
-    "        \n",
-    "        if(nl == ol){\n",
-    "            flag = true;\n",
-    "            break;\n",
-    "        }\n",
-    "    }\n",
-    "    if(!flag){\n",
-    "        removed.Add(ol);\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "WriteLine(\"======================\");\n",
-    "WriteLine(string.Join(\"\\n\", added.Distinct().OrderBy(l => l)));\n",
-    "WriteLine(\"======================\");\n",
-    "WriteLine(string.Join(\"\\n\", removed.Distinct().OrderBy(l => l)));\n",
+    "WriteLine(\"===========Newly Added===========\");\n",
+    "WriteLine(string.Join(\"\\n\", newCol.Except(oldCol).Distinct().OrderBy(x => x)));\n",
+    "WriteLine(\"===========Removed===========\");\n",
+    "WriteLine(string.Join(\"\\n\", oldCol.Except(newCol).Distinct().OrderBy(x => x)));\n",
     "WriteLine(\"======================\");"
    ]
   },
