--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -4753,3 +4753,123 @@ Some other differences I can think of:
     Map<int, string> dict = Map((1, "Hello"), (2, "World"));
 ```
 
+## 24.11.12
+
+[Recent updates for NetEscapades.EnumGenerators interceptors!](https://andrewlock.net/recent-updates-for-netescapades-enumgenerators-interceptors/)
+
+- [andrewlockNetEscapades.EnumGenerators A source generator for generating fast reflection methods for enums](https://github.com/andrewlock/NetEscapades.EnumGenerators)
+
+Enum 확장 코드 제너레이터
+
+```cs
+[EnumExtensions]
+public enum MyEnum
+{
+    First,
+
+    [Display(Name = "2nd")]
+    Second,
+}
+```
+
+아래는 자동 생성 코드
+
+```cs
+public static partial class MyEnumExtensions
+{
+    public const int Length = 2;
+
+    public static string ToStringFast(this MyEnum value)
+        => value switch
+        {
+            MyEnum.First => nameof(MyEnum.First),
+            MyEnum.Second => "2nd",
+            _ => value.ToString(),
+        };
+
+   public static bool IsDefined(MyEnum value)
+        => value switch
+        {
+            MyEnum.First => true,
+            MyEnum.Second => true,
+            _ => false,
+        };
+
+    public static bool IsDefined(string name)
+        => name switch
+        {
+            nameof(MyEnum.First) => true,
+            nameof(MyEnum.Second) => true,
+            _ => false,
+        };
+
+    public static bool TryParse(
+        [System.Diagnostics.CodeAnalysis.NotNullWhen(true)] string? name, 
+        bool ignoreCase, 
+        out MyEnum value)
+        => ignoreCase ? TryParseIgnoreCase(name, out value) : TryParse(name, out value);
+
+    private static bool TryParseIgnoreCase(
+        [System.Diagnostics.CodeAnalysis.NotNullWhen(true)] string? name, 
+        out MyEnum value)
+    {
+        switch (name)
+        {
+            case { } s when s.Equals(nameof(MyEnum.First), System.StringComparison.OrdinalIgnoreCase):
+                value = MyEnum.First;
+                return true;
+            case { } s when s.Equals(nameof(MyEnum.Second), System.StringComparison.OrdinalIgnoreCase):
+                value = MyEnum.Second;
+                return true;
+            case { } s when int.TryParse(name, out var val):
+                value = (MyEnum)val;
+                return true;
+            default:
+                value = default;
+                return false;
+        }
+    }
+
+    public static bool TryParse(
+        [System.Diagnostics.CodeAnalysis.NotNullWhen(true)] string? name, 
+        out MyEnum value)
+    {
+        switch (name)
+        {
+            case nameof(MyEnum.First):
+                value = MyEnum.First;
+                return true;
+            case nameof(MyEnum.Second):
+                value = MyEnum.Second;
+                return true;
+            case { } s when int.TryParse(name, out var val):
+                value = (MyEnum)val;
+                return true;
+            default:
+                value = default;
+                return false;
+        }
+    }
+
+    public static MyEnum[] GetValues()
+    {
+        return new[]
+        {
+            MyEnum.First,
+            MyEnum.Second,
+        };
+    }
+
+    public static string[] GetNames()
+    {
+        return new[]
+        {
+            nameof(MyEnum.First),
+            nameof(MyEnum.Second),
+        };
+    }
+}
+```
+
+- 라이브러리 작성자 얘기로는, Enum의 default ToString 메서드가 느리다고 이야기함.
+  - 벤치마크를 했다고 하는데, 벤치마크 코드를 안 보여줘서 확실히는 모르겠음.
