--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -4873,3 +4873,18 @@ public static partial class MyEnumExtensions
 
 - 라이브러리 작성자 얘기로는, Enum의 default ToString 메서드가 느리다고 이야기함.
   - 벤치마크를 했다고 하는데, 벤치마크 코드를 안 보여줘서 확실히는 모르겠음.
+
+## 24.11.14
+
+[GitHub - shalzuthSwordOfConvallariaResearch Vulnerability and exploit testing for a mobile game](https://github.com/shalzuth/SwordOfConvallariaResearch)
+
+- [Reverse Engineering Finding Exploits in Video Games](https://shalzuth.com/Blog/FindingExploitsInGames)
+
+소드 오브 콘발라리아(sword of convallaria) 취약점 찾기
+
+- Unity 엔진으로 개발되었다. -> asset 데이터를 열어볼 수 있는 도구가 있다.
+  - [GitHub - nesrak1AssetsTools.NET Read and write unity assetsbundle files, based on httpsgithub.comSeriousCacheUABE](https://github.com/nesrak1/AssetsTools.NET)
+- Lua bytecode 가 XOR 암호화 처리되있었음. key 를 찾으니 분석 가능, Lua Decompiler 활용
+  - [GitHub - Fireboyd78UnluacNET A Lua 5.1 decompiler library written in C. Based on the original Java version of unluac by tehtmi.](https://github.com/Fireboyd78/UnluacNET)
+- 주요 네트워크 패킷은 Wireshark 로 추적 가능했음. UDP 프로토콜 데이터를 분석해보니 Protobuf 를 사용하고 있었는데 Protobuf 디코더를 사용해서 분석했다.
+  - [Protobuf Decoder](https://protobuf-decoder.netlify.app/)
