--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -4888,3 +4888,21 @@ public static partial class MyEnumExtensions
   - [GitHub - Fireboyd78UnluacNET A Lua 5.1 decompiler library written in C. Based on the original Java version of unluac by tehtmi.](https://github.com/Fireboyd78/UnluacNET)
 - 주요 네트워크 패킷은 Wireshark 로 추적 가능했음. UDP 프로토콜 데이터를 분석해보니 Protobuf 를 사용하고 있었는데 Protobuf 디코더를 사용해서 분석했다.
   - [Protobuf Decoder](https://protobuf-decoder.netlify.app/)
+
+## 24.11.21
+
+**풍부해보이게 하기**
+
+- 유저 플레이 경험을 업그레이드 시키는 전략
+- 봇 투입하기. 서로 제한적으로 상호작용하는 환경에서 동작하는 봇을 마주치게 한다.
+  - 모바일 환경에서는 보통 자동 사냥 등등을 지원하니까, 꼭 사람처럼 보여야 할 필요가 없음
+  - '아 게임 하는 사람이 있구나' 정도의 인상을 전달할 것
+- MMORPG 에서 유저가 로그아웃 하는 경우, 종료된 유저의 캐릭터를 게임 상에서 바로 지워버리는 것이 아니라 10분 정도 가만히 있는 상태로 내버려 두는 것.
+
+[인문학의 뜰 허세(虛勢)](https://www.nongmin.com/article/20230823500585)
+
+    허세는 원래 병법에서 자주 사용하는 전략이다. 내가 가진 병력과 물자가 부족해도 상대방에게는 많게 보이려고 거짓으로 나의 전력을 부풀리는 것이다.
+    ‘수상개화(樹上開花·마른 나뭇가지에 거짓으로 꽃을 피워 자신을 치장한다)’는 ‘삼십육계’ 중 29번째 계책이다.
+    ‘삼국지연의’에서 장비가 20여명의 군사로 장판교(長坂橋)를 지키면서 말 꼬리에 나뭇가지를 달아 먼지를 일으켜 군사의 숫자가 많아 보이게 해 조조의 군대를 도망치게 한 것이 대표적이다.
+
+    전쟁에서 허세는 나의 부족함을 감추고, 상대를 속여 승리를 쟁취하는 데 기여한다.  
