--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -4906,3 +4906,9 @@ public static partial class MyEnumExtensions
     ‘삼국지연의’에서 장비가 20여명의 군사로 장판교(長坂橋)를 지키면서 말 꼬리에 나뭇가지를 달아 먼지를 일으켜 군사의 숫자가 많아 보이게 해 조조의 군대를 도망치게 한 것이 대표적이다.
 
     전쟁에서 허세는 나의 부족함을 감추고, 상대를 속여 승리를 쟁취하는 데 기여한다.  
+
+## 24.11.24
+
+[Quake Source Code Review](https://fabiensanglard.net/quakeSource/quakeSourceNetWork.php)
+
+- IdSoftware 작품 Quake 코드 리뷰
