--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -4913,6 +4913,43 @@ public static partial class MyEnumExtensions
 
 - IdSoftware 작품 Quake 코드 리뷰
 
+## 24.12.02
+
+[경력이 쌓이면서 했던 고민들과 깨달은 것들 · 어쩐지 오늘은](https://zzsza.github.io/diary/2024/11/08/thoughts-and-learnings-in-careers/)
+
+- 좋은 커리어의 기준은 누가 정해주는 것이 아니라 스스로가 정의해야 함
+
+    다른 사람이 좋다는 A라는 기준이 나중에 시간이 흐르면 다르게 될 수도 있음. 과거의 시기와 요즘은 또 다르게 생각할 수도 있음
+    학생이나 신입은 경험이 없어서 기준이 적을 수 있고, 이럴 땐 다른 사람의 의견을 들어보기도 하는 것도 다 한 번쯤 경험함
+        그러나 나의 경험을 늘리면서 나만의 생각, 기준을 만들게 됨
+    일반적으로 많이 나오는 연봉, 워라밸, 동료 등도 중요할 수 있지만 나의 근본적인 욕구나 이 직무를 선택한 이유에 따라 다를 수 있음
+        인정 욕구가 큰 사람에겐 워라밸보단 내 인정이 더 중요할 수 있음. 인정받기 위해 회사에서 성과를 높이려고 하고, 열심히 일하는 것이 즐거울 수 있음
+
+- 제가 생각하는 좋은 커리어는 “직무 하나에 나를 한정하지 말고 여러 경험을 하는 것. 문제 해결에 집중하는 것. 꾸준하게 계속 무언가를 시도하는 것”
+
+    여러 경험을 하다 보면 하고 싶지 않은 일을 할 수도 있지만, 그런 일도 경험으로 생각하는 편
+    다른 사람들이 하지 않았던 여러 경험들이 합쳐지면 나만의 고유한 영역이 될 수 있다. 제너럴한 영역을 여러 개가 있고, 각 영역을 아주 잘하면 그게 또 새로운 스페셜이 될 수 있다고 생각함
+    직무 관점에서도 MLOps나 Analytics Engineer가 하나의 직무에서 시작된 것이 아닌 다른 직무에서 확장되면서 생기는 직무라고 볼 수 있는데, 이와 유사하다고 생각
+
+- 저도 고민했던 시기가 있었음. 레트리카에서 데이터 분석가, 데이터 엔지니어 일을 조금씩 했었고 쏘카에선 데이터 분석가, 데이터 과학자, 머신러닝 엔지니어, 데이터 엔지니어, Engineering Manager 등을 경험했는데 너무 여러 가지를 경험해서 고민되기도 했지만 회사에서 요구하는 나의 역할을 최대한 잘 수행해 보자고 생각함
+
+    여러 경험을 했기에 직무의 협업 구조를 알 수 있고, 어떻게 프로젝트를 시작해야 할지, 사업부에선 어떤 관점으로 생각하는지 등을 모두 이해하게 됨
+    조직을 키우는 경험도 해보면서, 조직의 규모에 따라 어떤 방식으로 운영해야 할지에 대해 고민을 할 수 있게 되었음
+
+- 때론 지금 하는 행동들에 너무 의지를 부여하지 않아도 괜찮았음. 시간이 지나서 그 의미를 찾는 경우도 있었음
+
+    의미를 너무 찾다가 시간이 지나갈 수도 있다는 이야기. 과거에 했던 것을 생각해보니 의미를 찾은 경우도 있기에 너무 의미를 찾는데 오래 걸린다면 잠시 실행해보는 것도 좋은 방법이라 생각(의미와 실행의 적절한 밸런스가 중요하다고 생각)
+
+- 저는 연차별로 성장의 정의가 다 달랐음. 1-2년 차의 성장은 나의 성장, 3-6년차의 성장은 팀과 조직의 성장, 그 이후의 성장은 잘 회복하며 지금 현상 유지하기가 성장이였음. 지금의 성장도 다른 방향으로 가는 중
+
+![image_2024-12-02-23-52-21](img/image_2024-12-02-23-52-21.png)
+
+- 정리하면 좋은 커리어의 정의는 내가 하는 것이고, 타인이 정해주지 않음. 나에 대해 생각을 해보고 나의 기준을 만드는 것을 추천함. 또한 시간의 흐름에 따라 성장은 달라질 수 있고 과거의 경험들이 갑자기 깨달음을 주는 경우도 있으니 걱정하지 말고 지금 순간을 잘 지내는 것을 추천함
+
+- 저는 ‘커리어의 목표가 무엇인가요?’라는 질문을 받으면 딱히 없고 그냥 오늘같이 하루하루 잘 보내는 것이 목표라고 말함. 장기적인 비전은 있으면 좋지만, 너무 큰 목표같이 느껴질 수 있어서 현실적인 오늘을 잘 살려고 함
+- 직무 관점에서 너무 직무 하나에 매몰되지 말고, 내가 얼마나 회사에 기여할 수 있고 사람들에게 도움을 줄 수 있을지를 생각하며 이 기준이 확장될 수 있는 기준으로 일하고 있음
+- 정리하면 어떤 일을 하더라도 회사에서 제일 잘하고, 세계에서 제일 잘하려면 어떻게 해야할까를 생각하면서 나의 길을 가려고 함. 좋은 커리어의 정의는 내가 하는 것이므로 내가 어떻게 하고 싶은지에 기반해서 하나씩 실행함. 직무에 한정되는 사람이 되지 말고 직무를 넘어서는 사람이 되려고 함
+
 ## 24.12.03
 
 **개발 서버 롤백 이슈🔥🔥**
@@ -4929,4 +4966,3 @@ public static partial class MyEnumExtensions
   -> 개발 서버 데이터 롤백.
 
 - 라이브라면 큰일 났을 상황. 원래는 주기적으로 데이터 백업을 하지만, 아직 개발용 서버에는 구축하지 않은 상태였음.
-
