--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -4912,3 +4912,21 @@ public static partial class MyEnumExtensions
 [Quake Source Code Review](https://fabiensanglard.net/quakeSource/quakeSourceNetWork.php)
 
 - IdSoftware 작품 Quake 코드 리뷰
+
+## 24.12.03
+
+**개발 서버 롤백 이슈🔥🔥**
+
+원인 불명의 MySQL timeout 문제가 발생 (EC2 장비 문제로 추측됨)
+
+- 원래는 DB 장애 상태에서도 쿼리 요청은 Redis 에 큐 형태로 임시 백업
+- MySQL 이슈 이후에 Redis 요청 큐는 계속 채워짐. -> 여기까지는 장애 대응
+- 그렇지만 MySQL 정상화 이후 Redis 요청 큐를 비워주면서 복구가 완료되는 것을 기대했지만...
+  - 일부 요청들이 누락되버림...
+  - 확인해봤더니, 요청 큐의 원자성을 보장하지 않았던 상태였음
+  - 모든 요청 큐가 성공해야 정상 복구를 보장, 하지만 일부 요청만 성공되었고 성공한 요청은 Redis 요청 큐에서 지워버렸으니
+  - 실패한 요청들은 아직 큐에 남은 상태였던 것. DB 데이터 정합이 깨져버림
+  -> 개발 서버 데이터 롤백.
+
+- 라이브라면 큰일 났을 상황. 원래는 주기적으로 데이터 백업을 하지만, 아직 개발용 서버에는 구축하지 않은 상태였음.
+
