--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -4966,3 +4966,19 @@ public static partial class MyEnumExtensions
   -> 개발 서버 데이터 롤백.
 
 - 라이브라면 큰일 났을 상황. 원래는 주기적으로 데이터 백업을 하지만, 아직 개발용 서버에는 구축하지 않은 상태였음.
+
+## 24.12.05
+
+[How Much Memory Do You Need in 2024 to Run 1 Milli  GeekNews](https://news.hada.io/topic?id=18015)
+
+    Rust, C#, Python, Go, Java, NodeJS 등의 최신 버전으로 **100만 개의 동시 작업을 처리하는 프로그램을 실행하여 메모리 효율성을 비교했습니다.**
+
+    **C# (NativeAOT)와 Rust가 가장 우수한 메모리 효율**을 보였으며, Go는 기대보다 높은 메모리 소비로 낮은 평가를 받았습니다. 전체적으로 .NET과 Rust의 성능이 돋보였고, Java (GraalVM)가 놀라운 개선을 보였습니다.
+
+    구체적으로 Rust는 약 29MB로 가장 적은 메모리를 사용했으며, C# NativeAOT는 약 71MB로 뒤를 이었습니다. NodeJS는 232MB, Python은 339MB를 기록했습니다. Go는 753MB로 상대적으로 높은 메모리 사용량을 보여 아쉬운 결과를 나타냈습니다. Java(GraalVM)는 92MB로 큰 개선을 보였습니다.
+
+[How Much Memory Do You Need in 2024 to Run 1 Million Concurrent Tasks?](https://hez2010.github.io/async-runtimes-benchmarks-2024/)
+
+![image_2024-12-05-23-49-29](img/image_2024-12-05-23-49-29.png)
+
+
