--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -4981,4 +4981,53 @@ public static partial class MyEnumExtensions
 
 ![image_2024-12-05-23-49-29](img/image_2024-12-05-23-49-29.png)
 
+## 24.12.06
+
+[빅테크에서 프로젝트를 Ship 하는 방법  GeekNews](https://news.hada.io/topic?id=17715)
+
+- [How I ship projects at big tech companies  sean goedecke](https://www.seangoedecke.com/how-to-ship/)
+
+> - Shipping is really hard and you have to make it your main priority
+> - Shipping doesn’t mean deploying code, it means making your leadership team happy
+> - You need your leadership team to trust you in order to ship
+> - Most of the essential technical work is in anticipating problems and creating fallback plans
+> - Scale back your implementation work as you approach launch so you’re free to jump on last-minute problems
+> - You should constantly ask yourself “can I ship right this second?”
+
+    That means that in almost all cases, shipping has to come first.
+    You cannot have anything else as your top priority.
+    If you spend all your time worrying about polishing the customer experience (for example), 
+    you will not ship!
+
+    What is shipping?
+
+    Why do so many engineers think shipping is easy? I know it sounds extreme, but I think many engineers do not understand what shipping even is inside a large tech company.
+
+    What does it mean to ship? 
+    It does not mean deploying code or even making a feature available to users.
+    **Shipping is a social construct within a company**.
+
+    Concretely, that means that a project is shipped when the important people at your company believe it is shipped.
+    If you deploy your system, but your manager or VP or CEO is very unhappy with it, you did not ship.
+
+    You only know you’ve shipped when your company’s leadership acknowledge you’ve shipped.
+    A congratulations message in Slack from your VP is a good sign, as is an internal blog post that claims victory.
+
+**커뮤니케이션의 중요성**
+
+> - The best thing is a track record of having shipped in the past, if you can get it
+> - Project confidence (if you’re visibly worried, they will be too)
+> - Project competence. You want to aim for something like a NASA mission control vibe
+> - Communicate professionally and concisely, and don’t make them chase you for updates: post a daily or weekly thread somewhere
+
+- NASA의 미션 컨트롤처럼 전문적이고 간결하게 소통해야 함.
+
+    It is much, much more important to do these things than for the project to ship with zero bugs on the exact deadline.
+
+    If a project has to be delayed for technical reasons,
+    in my experience **you will not suffer consequences so long as you communicate it clearly, confidently** (and ideally with some warning). 
+
+    In fact, it’s paradoxically often better for you if there is some kind of problem that forces a delay,
+    for the same reason that **the heroic on-call engineer who hotfixes an incident gets more credit than the careful engineer who prevents one.**
+
 
