--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -5030,4 +5030,19 @@ public static partial class MyEnumExtensions
     In fact, it’s paradoxically often better for you if there is some kind of problem that forces a delay,
     for the same reason that **the heroic on-call engineer who hotfixes an incident gets more credit than the careful engineer who prevents one.**
 
+## 24.12.09
 
+[Dev Drive Performance, Security and Control for Developers - Windows Developer Blog](https://blogs.windows.com/windowsdeveloper/2023/06/01/dev-drive-performance-security-and-control-for-developers/)
+
+- Windows11 에서 제공하는 개발용 드라이브 환경
+- File IO 과정의 병목 구간을 최적화 했다고 함.
+
+> Dev Drive is built on the **Resilient File System (ReFS)** and combined with the new performance mode capability of **Microsoft Defender Antivirus**, provides **up to 30% better performance** for overall build times compared to current, in-market Windows 11 (22H2).
+
+    We received feedback from developers that **slow file io performance** was disruptive to their workflow.
+
+    ...
+
+    We then made optimizations to the file system and introduced a new performance capability for Microsoft Defender Antivirus. 
+    Now available in public preview, this new capability provides asynchronous scanning on a Dev Drive and does not change the security posture of your system drive or other drives  Asynchronous scanning provides improved security compared to traditional folder and process exclusions which are often used by developers.
+    As a result, Dev Drive improves overall build performance, most notably in heavy file io based scenarios.
