--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -5036,6 +5036,7 @@ public static partial class MyEnumExtensions
 
 - Windows11 에서 제공하는 개발용 드라이브 환경
 - File IO 과정의 병목 구간을 최적화 했다고 함.
+  - Microsoft Defender 가 File IO 과정에 이러저러한 오버헤드를 만드는 듯. 여기서도 성능 개선이 있었다고 소개함.
 
 > Dev Drive is built on the **Resilient File System (ReFS)** and combined with the new performance mode capability of **Microsoft Defender Antivirus**, provides **up to 30% better performance** for overall build times compared to current, in-market Windows 11 (22H2).
 
