--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -5187,3 +5187,18 @@ public static partial class MyEnumExtensions
     주요 GC 언어들이 메모리는 GC 로 관리하지만 결국 파일핸들, 소켓과 같은 관리가 결정론적이어야 하는 리소스를 위해서
     RAII 와 같은 구조나 (Java의 try-with-resources statement 나, C# 의 using statement, Python 의 with statement 등) 비슷한 구조 (Go 의 defer 등)
     들을 추가로 도입 해서 결국 **한 언어에 여러 리소스 관리 모드가 있게 되는데, 이런것보다 좀 더 낫지 않나 싶습니다**.
+
+## 24.12.11
+
+[git-goodsgitanimals 🦆 깃허브 활동으로 펫을 키우세요  Have pet in your github](https://github.com/git-goods/gitanimals)
+
+
+    깃허브 활동으로 펫을 키우세요!
+    깃허브 활동으로 펫을 획득하고 성장시킬 수 있어요.
+    커밋을 30번 하면 1개의 펫을 추가로 입양할 수 있어요.
+    1개의 contribution은 랜덤한 펫의 level을 1 증가시켜요.
+    키운 펫은 다른사람과 거래할 수 있어요.
+    배경을 구매하고 변경할 수 있어요.
+
+    50 종류가 넘는 펫을 뽑고 기르세요.
+    홈페이지 에서 펫을 거래하고, 배경을 구매하고 관리할 수 있어요.
