--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -5202,3 +5202,24 @@ public static partial class MyEnumExtensions
 
     50 종류가 넘는 펫을 뽑고 기르세요.
     홈페이지 에서 펫을 거래하고, 배경을 구매하고 관리할 수 있어요.
+
+## 24.12.12
+
+[(532) No More Texture Repetition! Cell Bombing in Unreal Engine Materials - YouTube](https://www.youtube.com/watch?v=tQ49FnQjIHk&t=1207s)
+
+![image_2024-12-12-11-37-06](img/image_2024-12-12-11-37-06.png)
+
+- [No More Texture Repetition! Cell Bombing in Unreal Engine Materials ](https://lilys.ai/notes/502231)
+
+> 이 영상은 언리얼 엔진에서 텍스쳐 반복 문제를 해결하기 위한 'cell bombing' 기술에 대해 깊이 다룹니다.
+>
+> 단일 타일링 텍스쳐만으로는 반복된 패턴이 눈에 띌 수 있는데, 이 기술을 이용하면 텍스쳐를 변형시켜 자연스럽게 보이도록 할 수 있습니다.
+>
+> 여러 가지 매개변수를 조정하여 효과를 제어하고, 실제 구현 예제를 통해 기술적 내용을 쉽게 따라할 수 있도록 안내합니다. 
+>
+> 여러 방향으로 랜덤화된 텍스쳐와 회전을 추가함으로써, 시각적으로 더 풍부한 표현이 가능합니다. 
+>
+> 이 영상은 언리얼 엔진에서의 텍스처 관리와 관련한 효율적인 접근 방식을 제공하며, 재사용이 가능한 기능으로 확장할 수 있는 방법을 탐색합니다.
+
+- vornoi 텍스쳐 활용
+  - [Voronoi diagram - Wikipedia](https://en.wikipedia.org/wiki/Voronoi_diagram)
