--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -5223,3 +5223,74 @@ public static partial class MyEnumExtensions
 
 - vornoi 텍스쳐 활용
   - [Voronoi diagram - Wikipedia](https://en.wikipedia.org/wiki/Voronoi_diagram)
+
+## 24.12.18
+
+[GitHub - mediar-aiscreenpipe build ai agents that have the full context, open source, runs locally, developer friendly. 247 screen, mic, keyboard recording and control](https://github.com/mediar-ai/screenpipe)
+
+- [screenpipe - 데스크탑의 모든 데이터를 가져오는 API  GeekNews](https://news.hada.io/topic?id=18198)
+
+모니터를 녹화해서 AI Agent 에게 알려줌
+
+- 비밀번호를 가상 키패드로 입력한다거나, 보안상 민감한 정보를 가진 개인 메일을 보는 경우 등
+  - 모니터 자동 녹화 도구는 사용하기 까다로울 것 같다.
+
+---
+
+[작은 앱 프로젝트 윤슬 가계부 아이폰, 아이패드, 맥 가계부 앱 (Mac Cataly  GeekNews](https://news.hada.io/topic?id=18190)
+
+- [App Store에서 제공하는 윤슬 가계부 - 캘린더로 관리하는 지출 & 수입](https://apps.apple.com/kr/app/%EC%9C%A4%EC%8A%AC-%EA%B0%80%EA%B3%84%EB%B6%80-%EC%BA%98%EB%A6%B0%EB%8D%94%EB%A1%9C-%EA%B4%80%EB%A6%AC%ED%95%98%EB%8A%94-%EC%A7%80%EC%B6%9C-%EC%88%98%EC%9E%85/id6514279917)
+
+---
+
+[An Interactive Guide to Transforming JSON with jq  Navendu Pottekkat - The Open Source Absolutist](https://navendu.me/posts/jq-interactive-guide/)
+
+- [jq로 JSON 변환하기 인터랙티브 가이드  GeekNews](https://news.hada.io/topic?id=18213)
+
+> jq is a command line tool for working with JSON. Like JSON, jq is ubiquitous, as it comes installed in most Linux distributions,
+>
+> and you would have at least used it to pretty print a JSON file or response:
+
+```
+curl 'https://jsonplaceholder.typicode.com/users/1' | jq
+```
+
+```json
+{
+  "id": 1,
+  "name": "Leanne Graham",
+  "username": "Bret",
+  "email": "Sincere@april.biz",
+  "address": {
+    "street": "Kulas Light",
+    "suite": "Apt. 556",
+    "city": "Gwenborough",
+    "zipcode": "92998-3874",
+    "geo": {
+      "lat": "-37.3159",
+      "lng": "81.1496"
+    }
+  },
+  "phone": "1-770-736-8031 x56442",
+  "website": "hildegard.org",
+  "company": {
+    "name": "Romaguera-Crona",
+    "catchPhrase": "Multi-layered client-server neural-net",
+    "bs": "harness real-time e-markets"
+  }
+}
+```
+
+
+```
+curl 'https://jsonplaceholder.typicode.com/users' | jq \
+'.[] | select(.address.city == "South Christy") | {name, username, email}'
+```
+
+```json
+{
+  "name": "Mrs. Dennis Schulist",
+  "username": "Leopoldo_Corkery",
+  "email": "Karley_Dach@jasper.info"
+}
+```
