--- a/Document_2024/C_2024.md
+++ b/Document_2024/C_2024.md
@@ -5294,3 +5294,34 @@ curl 'https://jsonplaceholder.typicode.com/users' | jq \
   "email": "Karley_Dach@jasper.info"
 }
 ```
+---
+
+[no hello](https://nohello.net/en/)
+
+Note that Keith could have got his answer minutes sooner, and needn't have kept Tim waiting.
+In fact, Tim could have started thinking about the question right away!
+
+People who do this are generally trying to be polite by not jumping right into the request, like one would in person or on the phone - and that's great! But it's 2022 and chat is neither of those things. For most people, typing is much slower than talking. So despite best intentions, you're actually just making the other person wait for you to phrase your question, which is lost productivity (and kinda annoying).
+
+The same goes for:
+
+    ❌ "Hello, are you around?"
+    ❌ "hi sophie - quick question."
+    ❌ "You got a sec?"
+    ❌ "yt?"
+    ❌ "ping"
+    ❌ etc.
+
+Just ask the question! 😫
+
+
+
+If you feel it's a bit brusque to simply say "Hi" and ask the question, you can still preface your message with as many pleasantries as you see fit.
+
+For example:
+
+    ✅ "hey man, what's up? also, any idea when that thing's due?"
+    ✅ "Hi there! Hope you're well. I'm after the latest deck, when you get a sec :)"
+    ✅ "hey, if you're not busy, could you update those NFRs?"
+    ✅ etc.
+
